# LangChain-Learning

./: README.md  pyproject.toml
Chat_Models/: chat_model_hf_api.py  chat_model_hf_local.py  chat_model_openai.py
Embedding_Models/: document_similarity.py  embedding_hf_local.py  embedding_hf_local_docs.py  embedding_openai_docs.py  embedding_openai_query.py
LLM/: llm_demo.py
