[project]
name = "Langchain_Learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

# ONLY API + INFERENCE DEPENDENCIES
dependencies = [
  # LangChain Core
  "langchain",
  "langchain-core",
  # OpenAI Integration
  "langchain-openai",
  "openai",
  # Anthropic Integration
  "langchain-anthropic",
  # Google Gemini (PaLM) Integration
  "langchain-google-genai",
  "google-generativeai",
  # Hugging Face Integration
  "langchain-huggingface",
  "transformers",
  "huggingface-hub",
  # Environment Variable Management
  "python-dotenv",
  # Machine Learning Utilities
  "numpy",
  "scikit-learn",
  "torch>=2.13.0",
]

# OPTIONAL GROUPS FOR TRAINING / PIPELINES
[project.optional-dependencies]

pipeline = [
  "dvc>=3.0",
  "category_encoders",
  "dask[dataframe]",
  "dvc[s3]>=3.67.1",
  "awscli>=1.45.0",
]

dev = [
  "matplotlib",
  "seaborn",
  "missingno",
  "plotly",
  "kagglehub",
  "nbformat>=4.2.0",
  "ipykernel>=7.2.0",
  "category_encoders",
  "dask[dataframe]",
  "jinja2>=3.1.6",
  "graphviz>=0.21",
  "streamlit>=1.58.0",
]

test = [
  "coverage",
  "httpx",
  "pytest",
  "pytest-asyncio",
  "ruff",
  "ty",
  "ipdb",
]

[project.urls]
bugs = "hhttps://github.com/AvanindraBose/Langchain-Learning/issues"
homepage = "https://github.com/AvanindraBose/Langchain-Learning"

[project.scripts]
Subscribly = "Subscribly.cli:app"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"

[tool.uv]
package = false
